fix: update readme

--- a/.github/workflows/generate_stats.yaml
+++ b/.github/workflows/generate_stats.yaml
@@ -1,9 +1,11 @@
 name: GitHub Profile Stats
 
 on:
-  schedule:
-    # run everyday at 12:00 UTC
-    - cron: "0 12 * * *"
+  push:
+    branches: [Xmain]
+  # schedule:
+  #   # run everyday at 12:00 UTC
+  #   - cron: "0 12 * * *"
   workflow_dispatch:
 
 permissions:
