--- a/.github/workflows/render-video.yaml
+++ b/.github/workflows/render-video.yaml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [main]
-  schedule:
-    - cron: "0 0 * * *"
+    branches: [Xmain]
+  # schedule:
+  #   - cron: "0 0 * * *"
   workflow_dispatch:
 
 permissions:
