--- a/helm-package-sign-push/action.yaml
+++ b/helm-package-sign-push/action.yaml
@@ -132,25 +132,55 @@ runs:
         
         echo "${{ inputs.oci-password }}" | helm registry login ghcr.io --username "${{ inputs.oci-username }}" --password-stdin
         
-        # Capture output and show it
-        PUSH_OUTPUT=$(helm push "${PACKAGE_PATH}" "oci://${{ inputs.oci-registry }}" 2>&1) || {
-          echo "::error::Helm push failed"
+        # Push and capture output - show errors immediately
+        echo "Pushing ${PACKAGE_PATH} to oci://${{ inputs.oci-registry }}"
+        if ! PUSH_OUTPUT=$(helm push "${PACKAGE_PATH}" "oci://${{ inputs.oci-registry }}" 2>&1); then
+          echo "::error::Helm push failed:"
           echo "${PUSH_OUTPUT}"
           exit 1
-        }
+        fi
+        
+        echo "Push output:"
         echo "${PUSH_OUTPUT}"
         
-        # Try multiple patterns to extract digest
+        # Extract digest with more robust pattern
         CHART_DIGEST=$(echo "${PUSH_OUTPUT}" | grep -oE 'sha256:[a-f0-9]{64}' | head -1)
         
         if [ -z "${CHART_DIGEST}" ]; then
           echo "::error::Failed to extract chart digest from output"
-          echo "Push output was: ${PUSH_OUTPUT}"
           exit 1
         fi
         
         echo "digest=${CHART_DIGEST}" >> $GITHUB_OUTPUT
         echo "Chart digest: ${CHART_DIGEST}"
+    # - name: Push to OCI registry
+    #   id: oci-push
+    #   shell: bash
+    #   run: |
+    #     set -e
+    #     PACKAGE_PATH="/tmp/${{ inputs.chart-name }}-${{ inputs.version }}.tgz"
+        
+    #     echo "${{ inputs.oci-password }}" | helm registry login ghcr.io --username "${{ inputs.oci-username }}" --password-stdin
+        
+    #     # Capture output and show it
+    #     PUSH_OUTPUT=$(helm push "${PACKAGE_PATH}" "oci://${{ inputs.oci-registry }}" 2>&1) || {
+    #       echo "::error::Helm push failed"
+    #       echo "${PUSH_OUTPUT}"
+    #       exit 1
+    #     }
+    #     echo "${PUSH_OUTPUT}"
+        
+    #     # Try multiple patterns to extract digest
+    #     CHART_DIGEST=$(echo "${PUSH_OUTPUT}" | grep -oE 'sha256:[a-f0-9]{64}' | head -1)
+        
+    #     if [ -z "${CHART_DIGEST}" ]; then
+    #       echo "::error::Failed to extract chart digest from output"
+    #       echo "Push output was: ${PUSH_OUTPUT}"
+    #       exit 1
+    #     fi
+        
+    #     echo "digest=${CHART_DIGEST}" >> $GITHUB_OUTPUT
+    #     echo "Chart digest: ${CHART_DIGEST}"
 
     - name: Sign with cosign
       if: inputs.cosign-sign == 'true'
