fix: add gpg import, setup helm, setup cosign

--- a/helm-package-sign-push/action.yaml
+++ b/helm-package-sign-push/action.yaml
@@ -65,6 +65,18 @@ runs:
       run: |
         gpg --export-secret-keys > ~/.gnupg/secring.gpg
 
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@v6
+      with:
+        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.GPG_PASSPHRASE }}
+
+    - name: Setup Helm
+      uses: azure/setup-helm@v4
+
+    - name: Setup cosign
+      uses: sigstore/cosign-installer@v3
+
     - name: Package Helm chart with signing
       id: package
       shell: bash
