--- a/helm-package-sign-push/action.yaml
+++ b/helm-package-sign-push/action.yaml
@@ -12,6 +12,13 @@ inputs:
   version:
     description: 'Version for the chart (both version and appVersion)'
     required: true
+  gpg-private-key:
+    description: 'GPG private key (armored)'
+    required: true
+  gpg-passphrase:
+    description: 'GPG passphrase'
+    required: false
+    default: ''
   gpg-key-name:
     description: 'Name of the GPG key for Helm signing'
     required: false
@@ -60,16 +67,17 @@ outputs:
 runs:
   using: 'composite'
   steps:
+
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@v6
+      with:
+        gpg_private_key: ${{ inputs.gpg-private-key }}
+        passphrase: ${{ inputs.gpg-passphrase }}
+
     - name: Create GPG keyring for Helm
       shell: bash
       run: |
         gpg --export-secret-keys > ~/.gnupg/secring.gpg
-
-    # - name: Import GPG key
-    #   uses: crazy-max/ghaction-import-gpg@v6
-    #   with:
-    #     gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-    #     passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
     - name: Setup Helm
       uses: azure/setup-helm@v4
@@ -115,26 +123,6 @@ runs:
           --data-binary "@${PROV_PATH}" \
           "https://${{ inputs.chartmuseum-url }}/api/prov"
 
-    # - name: Push to OCI registry
-    #   id: oci-push
-    #   shell: bash
-    #   run: |
-    #     set -e
-    #     PACKAGE_PATH="/tmp/${{ inputs.chart-name }}-${{ inputs.version }}.tgz"
-        
-    #     echo "${{ inputs.oci-password }}" | helm registry login ghcr.io --username "${{ inputs.oci-username }}" --password-stdin
-        
-    #     PUSH_OUTPUT=$(helm push "${PACKAGE_PATH}" "oci://${{ inputs.oci-registry }}" 2>&1)
-    #     echo "${PUSH_OUTPUT}"
-        
-    #     CHART_DIGEST=$(echo "${PUSH_OUTPUT}" | grep "Digest: sha256:" | awk '{print $2}')
-    #     if [ -z "${CHART_DIGEST}" ]; then
-    #       echo "::error::Failed to extract chart digest"
-    #       exit 1
-    #     fi
-        
-    #     echo "digest=${CHART_DIGEST}" >> $GITHUB_OUTPUT
-    #     echo "Chart digest: ${CHART_DIGEST}"
     - name: Push to OCI registry
       id: oci-push
       shell: bash
@@ -165,34 +153,6 @@ runs:
         
         echo "digest=${CHART_DIGEST}" >> $GITHUB_OUTPUT
         echo "Chart digest: ${CHART_DIGEST}"
-    # - name: Push to OCI registry
-    #   id: oci-push
-    #   shell: bash
-    #   run: |
-    #     set -e
-    #     PACKAGE_PATH="/tmp/${{ inputs.chart-name }}-${{ inputs.version }}.tgz"
-        
-    #     echo "${{ inputs.oci-password }}" | helm registry login ghcr.io --username "${{ inputs.oci-username }}" --password-stdin
-        
-    #     # Capture output and show it
-    #     PUSH_OUTPUT=$(helm push "${PACKAGE_PATH}" "oci://${{ inputs.oci-registry }}" 2>&1) || {
-    #       echo "::error::Helm push failed"
-    #       echo "${PUSH_OUTPUT}"
-    #       exit 1
-    #     }
-    #     echo "${PUSH_OUTPUT}"
-        
-    #     # Try multiple patterns to extract digest
-    #     CHART_DIGEST=$(echo "${PUSH_OUTPUT}" | grep -oE 'sha256:[a-f0-9]{64}' | head -1)
-        
-    #     if [ -z "${CHART_DIGEST}" ]; then
-    #       echo "::error::Failed to extract chart digest from output"
-    #       echo "Push output was: ${PUSH_OUTPUT}"
-    #       exit 1
-    #     fi
-        
-    #     echo "digest=${CHART_DIGEST}" >> $GITHUB_OUTPUT
-    #     echo "Chart digest: ${CHART_DIGEST}"
 
     - name: Sign with cosign
       if: inputs.cosign-sign == 'true'
